<resources>
    <string name="app_name">Suzuki Ride Connect</string>
    <string name="no_internet_connection">No internet</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="turn_ble">Please turn on Bluetooth</string>
    <string name="turn_loc">Gps seems off. Please turn on location from settings</string>
    <string name="cancel">Cancel</string>
    <string name="notifytitle">Settings</string>
    <string name="fail">Connection failed</string>
    <string name="settings">Location settings</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connection Success</string>
    <string name="disconnected">Disconnected from device</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="switch_on">Switch on device</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="Choose_pic">Choose picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove </string>
    <string name="Session_Message">It seems that navigation is recently used in some other device.
        You have to finish navigation earlier navigation to start new navigation. Would you like to proceed ?</string>
    <string name="Pair_Button">PAIR WITH SUZUKI</string>
    <string name="Connect_Suzuki">CONNECT TO SUZUKI</string>
    <string name="Search_Device">SEARCHING VEHICLES</string>
    <string name="Connect_Alert">Pair with Suzuki</string>
    <string-array name="header_titles">
        <item>Social Notifications</item>
        <item>Auto-reply sms</item>
        <item>Speed warning</item>
        <item>Always record route</item>
        <item>Sync clock</item>
    </string-array>
    <string-array name="h1_items">
        <item>SIM Incoming calls</item>
        <item>SIM Incoming sms</item>
        <item>Whatsapp calls</item>
        <item>Whatsapp text</item>
    </string-array>
    <string-array name="h2_items">
        <item>Call you back later</item>
        <item>Im Busy</item>
        <item>Im Riding</item>
        <item>Custom Message</item>
    </string-array>
    <string-array name="acc_type">
        <item>Choose your ride type</item>
        <item>Bike</item>
        <item>Scooter</item>
    </string-array>
    <string name="suzukiservice">Suzuki Service</string>
    <string name="fuel">Fuel Station</string>
    <string name="hospitals">Hospitals</string>
    <string name="atm">Banks and ATM</string>
    <string name="food">Food and Restaurants</string>
    <string name="sales">Suzuki Sales</string>
    <string name="tyrerepair">Tyre Repair Shops</string>
    <string name="medicals">Medical Stores</string>
    <string name="parking">Parking</string>
    <string name="convenience">Convenience Stores</string>
    <string name="AutoSuggestTagExplaination">Explaination</string>
    <string name="AutoSuggestTagSuggestion">Suggestion</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="current_location_not_available">Current location not available</string>
    <string name="gps_connection_lost">GPS connection lost</string>
    <string name="gps_connection_restored">GPS connection restored</string>
    <string name="take_possible_u_turn">Take possible U-Turn</string>
    <string name="re_routing">Re-routing&#8230;</string>
    <string name="rerouting">Re-routing</string>
    <string name="destination_reached">Destination arrived</string>
    <string name="point_on_map">Point on map</string>
    <string name="then">Then</string>
    <string name="recenter">Recenter</string>
    <string name="muted">Muted</string>
    <string name="unmuted">Unmuted</string>
    <string name="question1">How can I start the navigation ?</string>
    <string name="question2">
        <item>Lorem ipsum dolor sit amet ?</item></string>
    <string name="question3"> <item>sed do eiusmod tempor incididunt ut
labore et dolore magna aliqua ?</item></string>
    <string name="answer1">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna
aliqua. Ut enim ad minim veniam.</string>
    <string name="answer2">ut labore et dolore magna
aliqua. Ut enim ad minim veniam.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_logo_desc">Splash Logo</string>
    <string name="want_to_proceed">Do you want to proceed?</string>
    <string name="set_work_address">Set Work Address</string>
    <string name="edit_work_address">Edit Work Address</string>
    <string name="set_home_address">Set Home Address</string>
    <string name="edit_home_address">Edit Home Address</string>
    <string name="confirm_home_address">Please confirm Home Address</string>
    <string name="confirm_work_address">Please confirm Work Address</string>
    <string name="delete_home_address">Delete Home Address</string>
    <string name="delete_work_address">Delete Work Address</string>
    <string name="delete_recent_search">Delete Selected Search</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="profile">Profile</string>
    <string name="question_list">Profile Question List</string>
    <string name="main_list">Profile Main List</string>
    <string name="search">Search Your Question Here…</string>
    <string name="battery">Battery</string>
    <string name="help">Help</string>
    <string name="features">Features</string>
    <string name="navigation">Navigation</string>
    <string name="bluetooth">Bluetooth Connection</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="setting">Settings</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="welcome">Welcome</string>
    <string name="rides">Rides</string>
    <string name="trips">Trips</string>
    <string name="title">title</string>
    <string name="last_parked_location">Last Parked Location</string>
</resources>