<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    tools:context="com.suzuki.activity.FaqOptionsActivity">

    <!--toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarFaqOption"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/app_bar_color">
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="32dp"
                android:layout_height="24dp"
                android:contentDescription="@string/splash_logo_desc"
                android:background="@drawable/ic_arrow_back_black_24dp"/>
            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/faq_s"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:paddingStart="10dp"
                android:paddingEnd="@dimen/padding_10"
                android:gravity="start|center_vertical" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">
            <!--options-->
            <!--row0-->
            <LinearLayout
                android:id="@+id/option00"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/option01"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    android:src="@drawable/ic_launcher_trip_two"
                    android:contentDescription="@string/splash_logo_desc"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trips"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@id/option01"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/option00"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    android:src="@drawable/welcome_faq"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>

            <!--row1-->
            <LinearLayout
                android:id="@+id/option10"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintTop_toBottomOf="@id/option01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/option11"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/about_faq"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@id/option11"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option01"
                app:layout_constraintStart_toEndOf="@id/option10"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    android:src="@drawable/profile"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>

            <!--row2-->
            <LinearLayout
                android:id="@+id/option20"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintTop_toBottomOf="@id/option11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/option21"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/setting_faq"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@id/option21"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option11"
                app:layout_constraintStart_toEndOf="@id/option20"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/profile_setting_faq"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>

            <!--row3-->
            <LinearLayout
                android:id="@+id/option30"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintTop_toBottomOf="@id/option21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/option31"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/bluetooth_faq"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@id/option31"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option21"
                app:layout_constraintStart_toEndOf="@id/option30"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/navigation_faq"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>

            <!--row4-->
            <LinearLayout
                android:id="@+id/option40"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintTop_toBottomOf="@id/option31"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/option41"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/battery_faq"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battery"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@id/option41"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option31"
                app:layout_constraintStart_toEndOf="@id/option40"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/help"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>

            <!--row5-->
            <LinearLayout
                android:id="@+id/option50"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintTop_toBottomOf="@id/option41"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/option51"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/last_parked"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_parked_location"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@id/option51"
                android:layout_width="0dp"
                android:layout_height="@dimen/faq_option_height"
                android:background="@drawable/round_white_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option41"
                app:layout_constraintStart_toEndOf="@id/option50"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:visibility="invisible"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/faq_icon_size"
                    android:layout_height="@dimen/faq_icon_size"
                    app:srcCompat="@drawable/battery_faq"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battery"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
